added a bunch of optimization addition slides

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 					<section data-state="smiley-rolls">
 						<h1>
-							1/4 internet users abandon a page that takes more than 4 seconds to load
+							25% of users abandon a page if it takes more than 4 seconds to load.
 						</h1>
 						<aside class="notes">
 
@@ -209,7 +209,7 @@
 						</aside>
 					</section>
 
-					<section>
+					<section class="center">
 						<h1>Sensory Memory</h1>
 						<aside class="notes">
 							<li>Sensory memory = all of your senses</li>
@@ -269,7 +269,8 @@
 						<li>Remove 1/5 of one image and you can have all the jQuery you want</li></aside>
 					</section>
 
-					<section class="center"><img src="img/page-growth.gif">
+					<section class="center">
+					<img style="width:100%; margin-top:-2em" src="img/page-growth.gif">
 					<aside class="notes">size of websites still increasing</aside></section>
 
 					<section data-background="#4C2F52">
@@ -355,7 +356,7 @@
 					</section>
 
 					<section data-background="#5aaafa">
-						<blockquote>
+						<blockquote style="background:none">
 							"Never put an image on the web that you haven't optimized"
 							<footer>- Dave Rupert</footer>
 						</blockquote>
@@ -542,6 +543,14 @@
 						<li>Layout tree size -1247 w/flexbox</li></aside>
 					</section>
 
+					<section>
+						<h1>Style Audit</h1>
+					</section>
+
+					<section>
+						<video src="img/cssstats.mov" controls></video>
+					</section>
+
 				</section>
 
 				<section>
@@ -554,14 +563,11 @@
 						</aside>
 					</section>
 
-					<section class="center">
-						<img src="img/sande-1.png" alt="">
-						<img class="fragment" src="img/sande-2.png" alt="">
-						<aside class="notes">
-							<li>its so important to understand these distinctions</li>
-							<li>avoid using bloated frameworks where we can and built elements from the core up</li>
-						</aside>
+					<section>
+						<h1>Let's Take a Look at Our Delivery</h1>
 					</section>
+
+					<section><img src="img/network.gif" alt=""></section>
 
 					<section>
 						<img src="img/separation-concerns.png" alt="">
@@ -574,6 +580,15 @@
 							<li>Leftovers:<br>
 							Analytics, advertising, third-party content</li>
 							<li></li>
+						</aside>
+					</section>
+
+					<section class="center">
+						<img src="img/sande-1.png" alt="">
+						<img class="fragment" src="img/sande-2.png" alt="">
+						<aside class="notes">
+							<li>its so important to understand these distinctions</li>
+							<li>avoid using bloated frameworks where we can and built elements from the core up</li>
 						</aside>
 					</section>
 
@@ -992,6 +1007,65 @@ gulp.task('default', ['mobile']);
 					<aside class="notes">
 						just because we have all of these great testing tools doesn't mean that they replace the real thing. Whenever you can, test with real devices. After all, experiencing the cake in context is better than someone else telling you how it tastes.
 					</aside>
+					</section>
+				</section>
+
+				<section>
+
+					<section>
+						<h1>Let's Review</h1>
+					</section>
+
+					<section>
+						-- we're all in this together image/gif --
+						<aside class="note">You can't do this alone</aside>
+					</section>
+
+					<section data-background="#2d0e3d">
+						<h2>Performance Optimization Checklist</h2>
+
+						<style>
+							.checkboxed li {
+								font-size: 1.5em;
+							}
+
+							.checkboxed span{
+								color: #FDF435 ;
+							}
+						</style>
+						<ul class="checkboxed">
+							<li class="fragment" style="color: #C4FFD0">
+								Determine Important Content
+							</li>
+							<li class="fragment" style="color: #C3CFFF">
+								Create Most Performant Images
+							</li>
+							<li class="fragment" style="color: #C3CFFF">
+								Optimize Images
+							</li>
+							<li class="fragment" style="color: #C3CFFF">
+								DRY Stylesheet Architecture
+							</li>
+							<li class="fragment" style="color: #FFBC9F">
+								Consider Critical Rendering Path
+							</li>
+							<li class="fragment" style="color: #FFBC9F">
+								<span>C</span>oncatenate files
+							</li>
+							<li class="fragment" style="color: #FFBC9F">
+								<span>M</span>inify files
+							</li>
+							<li class="fragment" style="color: #FFBC9F">
+								<span>A</span>sync/Defer script loading
+							</li>
+							<li class="fragment" style="color: #FFBC9F">
+								<span>T</span>est! Repeat! Iterate!
+							</li>
+						</ul>
+					</section>
+
+					<section class="center">
+						<a href="http://thenetawards.com/vote/young-designer/"><img style="max-width: 600px; display: block; margin: 0 auto;" src="img/net_awards-logo15.svg" alt=""></a>
 					</section>
 
 					<section data-background="#e5e2e2">
