rejiggered the review section

--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
 							</li>
 						</ul>
 						<aside class="notes">
+							<li>shoutout to dan</li>
 							<li>ImageAlpha is a way of reducing colors in a png-24 to turn it into a lossy png with your consent. You manage a toolbar and make decisions</li>
 							<li>TinyPNG: integrate into build tools</li>
 							<li>ImageOptim goes through lossless compression algorithms to get the smallest size</li>
@@ -990,24 +991,6 @@ gulp.task('default', ['mobile']);
 							say a competitors site loads in 5 seconds. 20% of 5 seconds is 1 second. So to be perceived as faster than them, you need to have your pages taking no longer than 4 seconds</li>
 							<li>If your site is faster, it will convert users</li></aside>
 					</section>
-
-					<section data-background="#2d0e3d">
-						<h1 style="font-weight:900" 1000 PSI</h1>
-						<h1 style="font-weight:900" class="fragment">14 KB</h1>
-						<h1 style="font-weight:900" class="fragment">1 MB</h1>
-						<aside class="notes">
-							<li>To review, these are our goals/ideals for first byte time with gzip compression</li>
-							<li>On WebPageTest, aim for a Speed Index value of under 1000.</li>
-							<li>"Time to first byte": Ensure that all HTML, CSS and JavaScript fit within the first 14 KB.</li>
-						<li>The value of 14 KB has been measured empirically by Google and is the threshold for the first package exchanged between a server and client via towers on a cellular connection. You don’t need to include images within 14 Kb, but you might want to deliver the markup, style sheets and any JavaScript required to render the visible portion of the page in that threshold. Of course, in practice this value can only realistically be achieved with gzip compression.</li>
-						</aside>
-					</section>
-
-					<section data-background="img/pasted_image_at_2015_01_16_16_46.png">
-					<aside class="notes">
-						just because we have all of these great testing tools doesn't mean that they replace the real thing. Whenever you can, test with real devices. After all, experiencing the cake in context is better than someone else telling you how it tastes.
-					</aside>
-					</section>
 				</section>
 
 				<section>
@@ -1018,11 +1001,11 @@ gulp.task('default', ['mobile']);
 
 					<section>
 						-- we're all in this together image/gif --
-						<aside class="note">You can't do this alone</aside>
+						<aside class="notes">You can't do this alone</aside>
 					</section>
 
 					<section data-background="#2d0e3d">
-						<h2>Performance Optimization Checklist</h2>
+						<h2 style="font-weight: 600">Performance Optimization Checklist:</h2>
 
 						<style>
 							.checkboxed li {
@@ -1062,6 +1045,12 @@ gulp.task('default', ['mobile']);
 								<span>T</span>est! Repeat! Iterate!
 							</li>
 						</ul>
+					</section>
+
+					<section data-background="img/pasted_image_at_2015_01_16_16_46.png">
+					<aside class="notes">
+						just because we have all of these great testing tools doesn't mean that they replace the real thing. Whenever you can, test with real devices. After all, experiencing the cake in context is better than someone else telling you how it tastes.
+					</aside>
 					</section>
 
 					<section class="center">
