--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section class="intro-slide" data-background="img/intro-img.jpg">
+				<section class="intro-slide" data-background="img/wcake2.jpg">
 					<h1 class="intro-text">A Primer on Performance</span></h1>
 					<ul class="intro-data">
 						<li class="team-name">BD Conf Nashville 2015</li>
@@ -205,7 +205,7 @@
 
 					<section data-background="img/doorway.jpg">
 						<aside class="notes">
-							Doorway Effect explains why we can go searching for something in one room, walk into another room to look for it, and forget what we were looking for in the first place. This is due to our sensory memory, which works surprisingly similarly to a computer's memory bank. When presented with new stimuli, it halts the fluidity of the previous task, and can confuse us as to the task at hand.
+							Doorway Effect explains why we can go searching for something in one room, walk into another room to look for it, and forget what we were looking for in the first place. This is due to our sensory memory, which works surprisingly similarly to a computer's memory bank.
 						</aside>
 					</section>
 
@@ -213,7 +213,9 @@
 						<h1>Sensory Memory</h1>
 						<aside class="notes">
 							<li>Sensory memory = all of your senses</li>
-							<li>Continuation of a fluid task</li>
+							<li>We don't control it</li>
+							<li>Very limited time spans</li>
+							<li>Allows for fluid continuation of a task</li>
 					</aside>
 					</section>
 
@@ -231,9 +233,10 @@
 						<img style="width:100%;" src="img/Jakob-Nielsen-response-time-infographic.jpg">
 						<aside class="notes">
 						<li>performance speed vs interaction with the product</li>
-						<li>- 0.1 second - system reacting instantaneously</li>
-						<li>- 1.0 second - the limit for the user's flow of thought to stay uninterrupted, noticeable delay</li>
-						<li>- 10 seconds is about the limit for keeping the user's attention focused on the dialogue</li>
+						<li>0.1 second - system reacting instantaneously</li>
+						<li>1.0 second - the limit for the user's flow of thought to stay uninterrupted, noticeable delay</li>
+						<li>4 seconds - lose 25% of our users</li>
+						<li>10 seconds is p much the abslolute limit for keeping attention</li>
 						</aside>
 					</section>
 
@@ -251,6 +254,7 @@
 					<section data-background="img/strawberries.jpg">
 						<h2 style="background: white; display:inline-block; padding:.5em;">Content Strategy</h2>
 						<aside class="notes">
+							<li>ingredients</li>
 							<li>content is what you decide to put into the cake -- its ingredients -- you wouldn't mix onion powder and eggnog and cherries. limit yourself to only content or ingredients that blend well together and are needed to support your recipe, or app.</li>
 						</aside>
 					</section>
@@ -271,7 +275,8 @@
 
 					<section class="center">
 					<img style="width:100%; margin-top:-2em" src="img/page-growth.gif">
-					<aside class="notes">size of websites still increasing</aside></section>
+					<aside class="notes"><li>size of websites still increasing</li>
+					<li>Look at what they're made up of</li></aside></section>
 
 					<section data-background="#4C2F52">
 						<h1>Do I really need that?</h1>
@@ -313,11 +318,6 @@
 					</section>
 
 					<section>
-						<h2>Image Types</h2>
-						<img class="center" src="img/data_models_buffer.gif" alt="">
-					</section>
-
-					<section>
 						<h2>File Types</h2>
 						<ul>
 							<li class="fragment"><p>jpg</p>
@@ -339,9 +339,8 @@
 
 						<aside class="notes">
 							<li>.jpg – Lossy Format, great for photographs, images with a lot of color</li>
-							<li>.png (8-bit) – Lossless Compression type, limited color range -- may be artifacts</li>
-							<li>PNG-8 refers to palette variant, which supports only 256 colors, but is smaller in size.</li>
-							<li>PNG-24 refers to true color variant, which supports more colors, but might be bigger</li>
+							<li>PNG-8 refers to palette variant, which supports only 256 colors. Lossless Compression type. bc of limited color range -- may be artifacts </li>
+							<li>PNG-24 refers to true color variant, which supports more colors, but might be bigger. no artifacts</li>
 							<li>.gif – Lossless with limited color range like .png 8, but .png is usually the better choice.</li>
 							<li>svg - vector graphics, can be exported from illustrator or sketch</li>
 						</aside>
@@ -390,6 +389,17 @@
 							<li>compressor.io <-- web version</li>
 							<li>SVGO, also build tools and web version</li>
 							<li>http://addyosmani.com/blog/image-optimization-tools/</li>
+						</aside>
+					</section>
+
+					<section>
+						<img src="img/imgmin.png" alt="">
+						<aside class="notes">
+							<ul>
+								<li>ImageMin with gulp is what I use to Automate </li>
+								<li>Going to get into task runners a bit later</li>
+								<li>uses SVGO, along with gifsicle, jpegtran, and optipng --> all Lossless optimizers </li>
+							</ul>
 						</aside>
 					</section>
 
@@ -445,6 +455,10 @@
 						</aside>
 					</section>
 
+					<section data-background="#4c2f52">
+						<h1 class="center">It's About How Fast the Page Feels</h1>
+					</section>
+
 					<section>
 						<img src="img/progjpgexample.jpg" alt="">
 						<aside class="notes">
@@ -476,13 +490,22 @@
 						<aside class="notes"><li>if you need to use retina images, consider picturefill</li><li>polyfill for the picture element and source set</li><li>serve images based on a variety of conditions like screen size, viewport size, and screen resolution</li></aside>
 					</section>
 
-					<section>
-						<h1>Jank!</h1>
-						<h2>60 FPS FTW</h2>
+					<section data-background="img/sitecost.png">
+						<h1 class="fragment" style="font-size:2.3em; background: white; padding: .5em; text-align: center;">whatdoesmysitecost.com</h1>
 						<aside class="notes">
-							<li>This is a real term. Jank is any stuttering, juddering or just plain halting that users see when a site or app isn't keeping up with the refresh rate (which is 60 times per second). Think: slow, crappy, or janky parallax experience.</li>
+							<ul>
+								<li>websites are expensive</li>
+								<li>whatdoesmysitecost.com</li>
+							</ul>
+						</aside>
+					</section>
+
+					<section class="center">
+						<h1 style="font-size:10em;">Jank!</h1>
+						<h1 class="fragment" style="color: #4c2f52">60 FPS</h1>
+						<aside class="notes">
+							<li>This is a real term. Jank is any stuttering, juddering or just plain halting that users see when a site or app isn't keeping up with the refresh rate (which is 60 times per second, 60FPS). Think: slow, crappy, or janky parallax experience.</li>
 							<li>frame rate on mobile will ALWAYS be different than on desktop -- so test on mobile</li>
-							<li>jankfree.com</li>
 							</aside>
 					</section>
 
@@ -530,7 +553,7 @@
 
 					<section>
 						<img src="img/useflex-1.jpg" alt="Use Flexbox">
-						<li><a href="http://aerotwist.com/">Stolen from Here</a></li>
+						<li><a href="http://aerotwist.com/">Stolen from Paul Lewis</a></li>
 					</section>
 
 					<section>
@@ -544,12 +567,16 @@
 						<li>Layout tree size -1247 w/flexbox</li></aside>
 					</section>
 
-					<section>
+					<section class="center">
 						<h1>Style Audit</h1>
 					</section>
 
 					<section>
 						<video src="img/cssstats.mov" controls></video>
+						<aside class="notes"><ul>
+							<li>css stats.com</li>
+							<li></li>
+						</ul></aside>
 					</section>
 
 				</section>
@@ -875,7 +902,7 @@ gulp.task('scripts', function() {
 							<li>HTTP Requests: <strong>50 - 75</strong></li>
 						</ul>
 						<aside class="notes">
-							the numbers all together based on North's recommendations
+							the numbers all together based on standards --North's recommendations
 						</aside>
 					</section>
 
@@ -884,7 +911,7 @@ gulp.task('scripts', function() {
 					</section>
 
 					<section>
-						<h1>More Hipster Numbers:</h1>
+						<h1>More Numbers:</h1>
 						<ul>
 							<li>First Byte Time: <strong>85</strong></li>
 							<li>Use persistent connection: <strong>85</strong></li>
@@ -967,10 +994,6 @@ gulp.task('default', ['mobile']);
 						<ul><li><a href="http://una.github.io/gulp-local-psi/">Local Testing with Gulp PSI</a></li></ul>
 					</section>
 
-					<section data-background="img/gulp-env.png">
-						<h1 class="fragment" style="font-size:2.3em; background: black; color: white; padding: .5em; text-align: center;">github.com/una/gulp-starter-env</h1>
-					</section>
-
 					<section>
 						<h2>The Performance Budget</h2>
 						<img src="img/1415552234perfbudget-task-failed.png" alt=""><br>
@@ -1000,8 +1023,16 @@ gulp.task('default', ['mobile']);
 					</section>
 
 					<section>
-						-- we're all in this together image/gif --
+					<h2 style="font-weight: 600">We're All in This Together</h2>
+						<img class="center" src="img/wallpaper-di-high-school-musical-3-con-il-cast-al-completo-82753.jpg" alt="">
 						<aside class="notes">You can't do this alone</aside>
+					</section>
+
+					<section data-background="img/gulp-env.png">
+						<h1 class="fragment" style="font-size:2.3em; background: black; color: white; padding: .5em; text-align: center;">github.com/una/gulp-starter-env</h1>
+						<aside class="notes">
+							used this to unify my design team
+						</aside>
 					</section>
 
 					<section data-background="#2d0e3d">
