moved things, final notes things

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 					</section>
 				</section>
 
+
+				<section class="center">
+					<a href="http://thenetawards.com/vote/young-designer/"><img style="max-width: 450px; display: block; margin: 0 auto;" src="img/net_awards-logo15.svg" alt=""></a>
+				</section>
+
 				<!-- pancakes - - > cake cakes. Make something you love. We're going to talk about products, and something that relates to all of us.  -->
 
 				<section data-background="img/dough.png">
@@ -601,6 +606,7 @@
 							<li>inverted triangle css</li>
 							<li>specificity graph trend upward</li>
 							<li>writing better quality CSS</li>
+							<li>not trying to override everything</li>
 							<li>writing less CSS == smaller file size</li>
 						</ul></aside>
 					</section>
@@ -825,6 +831,8 @@ gulp.task('scripts', function() {
 
 						<aside class="notes">
 							<li>CSS is also a part of your critical rendering path</li>
+							<li>This is why separation of concerns on the web is so important</li>
+							<li>divorce presentational styles from logic</li>
 							<li>you can make it even more performant by inlining your CSS styles</li>
 						</aside>
 					</section>
@@ -1162,10 +1170,6 @@ Prioritize Visible Content                 | 0
 							<li>just because we have all of these great testing tools doesn't mean that they replace the real thing. Whenever you can, test with real devices. After all, experiencing the cake in context is better than someone else telling you how it tastes.</li>
 							<li>I shot myself in the foot w/this -- didn't realize i wasn't serving a web font</li>
 						</aside>
-					</section>
-
-					<section class="center">
-						<a href="http://thenetawards.com/vote/young-designer/"><img style="max-width: 500px; display: block; margin: 0 auto;" src="img/net_awards-logo15.svg" alt=""></a>
 					</section>
 
 					<section data-background="#e5e2e2">
