updated slides for the flood :rain:

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
 				<section class="center">
-					<a href="http://thenetawards.com/vote/young-designer/"><img style="max-width: 450px; display: block; margin: 0 auto;" src="img/net_awards-logo15.svg" alt=""></a>
+					<a href="http://thenetawards.com/vote/young-designer/"><img style="max-width: 400px; display: block; margin: 0 auto;" src="img/net_awards-logo15.svg" alt=""></a>
 				</section>
 
 				<!-- pancakes - - > cake cakes. Make something you love. We're going to talk about products, and something that relates to all of us.  -->
@@ -97,6 +97,7 @@
 							an action, task, or operation, seen in terms of how <strong>successfully</strong> it was performed
 						</p>
 						<aside class="notes">
+							<li>dictionary.com definition</li>
 							<li>measure of succes = crux of our job</li>
 						</aside>
 					</section>
@@ -122,6 +123,20 @@
 								<li>if somebody cant access our content, then whats the point of putting it out there in the first place</li>
 								<li>Beautiful + Useable = Delightful Experience</li></aside>
 						</section>
+
+					<section class="center">
+						<h1>Let's Talk About Windows.</h1>
+						<aside class="notes">like, real ones. Look behind you</aside>
+					</section>
+
+					<section class="center" data-background="img/snoopy-inrain.gif">
+					<aside class="notes">does anybody remember the the little drizzle we had yesterday?</aside>
+					</section>
+
+					<section class="center">
+						<h1>Performance-First Design</h1>
+						<aside class="notes">Say it with me: Performance First Design</aside>
+					</section>
 
 					<section>
 						<blockquote>
@@ -294,7 +309,7 @@
 
 					<section data-background="#4C2F52">
 						<h1>What Next?</h1>
-						<aside class="notes">What do you want your user to do next?</aside>
+						<aside class="notes">What do you want your user to do next? -- prioritize your content</aside>
 					</section>
 
 				</section>
